refactor: rename submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 	path = frontend
 	url = https://github.com/waltererz/news-reply-sentiment-frontend.git
 [submodule "reply-sentiment-analysis"]
-	path = reply-sentiment-analysis
+	path = sentiment-analysis
 	url = https://github.com/xoxwgys56/reply-sentiment-analysis
