--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "reply-sentiment-analysis"]
 	path = sentiment-analysis
 	url = https://github.com/xoxwgys56/reply-sentiment-analysis
+[submodule "infra"]
+	path = infra
+	url = https://github.com/xoxwgys56/news-reply-analysis-infra.git
